# pop-launcher-cliphist-plugin

./: Cargo.toml  README.md  install.sh  out  plugin.ron
src/: main.rs
